--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
 		"clean": "rimraf dist"
 	},
 	"devDependencies": {
+		"@estruyf/vscode": "^0.0.2",
 		"@types/glob": "^7.2.0",
 		"@types/mocha": "^9.0.0",
 		"@types/node": "14.x",
@@ -82,6 +83,7 @@
 		"css-loader": "^6.6.0",
 		"eslint": "^8.6.0",
 		"glob": "^7.2.0",
+		"jsonc-parser": "^3.0.0",
 		"mocha": "^9.1.3",
 		"npm-run-all": "^4.1.5",
 		"postcss-import": "^14.0.2",
